--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <style>
           body {
-            background-image: url(https://i.pinimg.com/736x/68/24/60/6824606e11693ae715d4d83895bf7dc4--abstract-backgrounds-vector-design.jpg);
+            background-image: url("sj.jpg");
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: cover;
